# GraphoScan

./: .gitignore  Makefile  README.md  acquisition.cpp  acquisition_old.cpp  acquisition_seq.cpp  bench.sh  cameraParams.mat  marthib.tex  result.bench  sources.txt
Acquisition/: Calib_camera_0_Matlab.txt  Calib_camera_1_Matlab.txt  Makefile  acquisition.cpp  result.bench
Bench/: bench.sh  fps.bench  fps10x2000.bench  fps_omp.bench  latence.bench  latence.r  result.bench
Latence/: latence.bench  latence.r  latence_omp_3.bench  latence_omp_4.bench  latence_omp_7.bench  latence_omp_8.bench  latence_seq.bench  latence_seq_2.bench  latence_seq_5.bench  latence_seq_7.bench  latence_seq_8.bench
May_11_2017/: May_11_2017undist_camera_1.avi
Presentation/: pres_ter.nav  pres_ter.out  pres_ter.tex
Rapport/: Architecture.odg  biblio.bib  memoire_ter.out  memoire_ter.tex  rapport_ter.aux  rapport_ter.bbl  rapport_ter.blg  rapport_ter.tex  rapport_ter.toc
Tracking/: CMakeLists.txt  Camera.cpp  Camera.hpp  (+13 more)
Tracking/_new/: #Camera.cpp#  #OpenGL.hpp#  1207_undist_POLYTECH_L_add_1.txt  CMakeLists.txt  Camera.cpp  Camera.cpp~  Camera.h  Camera.hpp  Camera.hpp~  CameraCalibrator.cpp  CameraCalibrator.h  CameraCalibrator.hpp  CameraCalibrator.hpp~  GraphoScan.cpp  GraphoScan.h  GraphoScan.hpp  GraphoScan.hpp~  HOG.cpp  HOG.h  HOG.hpp  HOG.hpp~  Lib.h  OpenGL.cpp  OpenGL.cpp~  OpenGL.hpp  Shader.cpp  Shader.h  Shader.hpp  Shader.hpp~  Texture2D.cpp  Texture2D.cpp~  Texture2D.hpp  Texture2D.hpp~  graphoScan  left_add.txt  main.cpp  pt2_add.txt  pt2_addZ.txt  right_add.txt  test  (+1 more)
(+55 files in other folders)
